--- a/public/index.html
+++ b/public/index.html
@@ -36,5 +36,21 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=5fbd65dd5be22bd5f1ff75d50bda7a32"
+    ></script>
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=5fbd65dd5be22bd5f1ff75d50bda7a32&libraries=LIBRARY"
+    ></script>
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=5fbd65dd5be22bd5f1ff75d50bda7a32&libraries=services"
+    ></script>
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=5fbd65dd5be22bd5f1ff75d50bda7a32&libraries=services,clusterer,drawing"
+    ></script>
   </body>
 </html>
